--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     ]
   },
   "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
     "chai-immutable": "^1.5.3",
     "mocha": "^2.4.5"
