--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Server side for tutorial application using Flux, React, Immutable, ES6, Babel, Socket.io, Webpack, and Mocha. http://teropa.info/blog/2015/09/10/full-stack-redux-tutorial.html",
   "main": "index.js",
   "scripts": {
+    "start": "babel-node index.js",
     "test": "mocha --compilers js:babel-core/register --recursive --require ./test/test_helper.js",
     "test:watch": "npm run test -- --watch"
   },
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "immutable": "^3.7.6",
-    "redux": "^3.4.0"
+    "redux": "^3.4.0",
+    "socket.io": "^1.4.5"
   }
 }
